[package]
name = "indexed-line-reader"
version = "0.1.0"
authors = ["Bruno Filippone <bruno.filippone@b-fil.com>"]
description = "Allow seeking a file to a specific line"
keywords = ["indexed", "file", "line", "reader"]
repository = "https://github.com/bfil/indexed-line-reader"
documentation = "https://bfil.github.io/indexed-line-reader"
license = "MIT"
readme = "README.md"
